# TrailCurrentWallMountedDisplay

./: .gitignore  README.md  partitions.csv  sdkconfig.defaults
CAD/: BodyCase.stl  BodyCaseV2.stl  WaveshareEsp32P4WiFiCase.FCStd
GUI/: trailcurrent-touch-screen-control.eez-project  trailcurrent-touch-screen-control.eez-project-ui-state
components/mqtt_client/: CMakeLists.txt
components/mqtt_client/include/: app_mqtt.h
components/mqtt_client/src/: mqtt_client.c
components/wifi_credentials/: CMakeLists.txt
components/wifi_credentials/include/: wifi_credentials.h
components/wifi_credentials/src/: wifi_credentials.c
main/: CMakeLists.txt  actions.c  idf_component.yml  main.c  vars.c
main/ui/: actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  ui.c  ui.h  ui_font_fa32.c  ui_font_robot60.c  ui_image_img_chevron_up32px.c  ui_image_needle.c  ui_image_tuning_background.c  vars.h
